# src/modules/don-hang/dto/checkoutcard.dto.ts
@@ -4,7 +4,10 @@ import { Type } from 'class-transformer';
 import { PhuongThucThanhToan } from '../common/constant';
 import { DonHang } from '../entities/don-hang.entity';
 
-export class CheckoutCartDto extends OmitType(DonHang, ['tongTien']) {
+export class CheckoutCartDto extends OmitType(DonHang, [
+  'tongTien',
+  'trangThaiDonHang',
+]) {
   @IsString()
   @ApiProperty({ description: 'Địa chỉ giao hàng' })
   diaChiGiaoHang: string;
